Product CRUD extended GlobalExceptionHandler created